--- a/build.xml
+++ b/build.xml
@@ -4,24 +4,25 @@ direct PAS
 Python Application Services
 
 (C) direct Netware Group - All rights reserved
-http://www.direct-netware.de/redirect.php?pas
+http://www.direct-netware.de/redirect.py?pas;core
 
 This Source Code Form is subject to the terms of the Mozilla Public License,
 v. 2.0. If a copy of the MPL was not distributed with this file, You can
 obtain one at http://mozilla.org/MPL/2.0/.
 
-http://www.direct-netware.de/redirect.php?licenses;mpl2
+http://www.direct-netware.de/redirect.py?licenses;mpl2
 // -->
 <project name="PAS_core" default="compile.pyBuilder">
-	<dirname property="pasCore.basedir" file="${ant.file}" />
-	<property file="${pasCore.basedir}/_extras/build.properties" />
+	<dirname property="pas.basedir" file="${ant.file}" />
+	<property file="${pas.basedir}/_extras/build.properties" />
 
 	<target name="compile.pyBuilder" description="Compile module ${ant.project.name}">
 		<exec executable="python">
 			<arg file="${pyBuilder.filePathName}" />
 			<arg value="--filetype=${pyBuilder.fileTypes}" />
-			<arg value="--include=${pasCore.basedir}/data/,${pasCore.basedir}/scripts/" />
-			<arg value="--strip_prefix=${pasCore.basedir}/" />
+			<arg value="--include=${pas.basedir}/data/,${pas.basedir}/lang/,${pas.basedir}/scripts/" />
+			<arg value="--strip_prefix=${pas.basedir}/" />
+			<arg value="--output_dirs_chmod=0755" />
 		</exec>
 	</target>
 
