Enhancement: Add support for properties

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,2 @@
--e git+http://git.direct-netware.de/py/builder_suite/#egg=builderSuite
--e git+http://git.direct-netware.de/py/file/#egg=pyFile
--e git+http://git.direct-netware.de/py/json/#egg=pyJson
+-e git+http://git.direct-netware.de/py/file/#egg=dng-file
+-e git+http://git.direct-netware.de/py/json/#egg=dng-json
