--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 git+https://git.direct-netware.de/dpt/logging/@v1.0.1#egg=dpt-logging
 git+https://git.direct-netware.de/dpt/settings/@v1.1.2#egg=dpt-settings
 
-git+https://git.direct-netware.de/dpt/builder_suite/@v1.0.1#egg=dpt-builder-suite[gitsrc]
+git+https://git.direct-netware.de/dpt/builder_suite/@v1.0.1#egg=dpt-builder-suite[build]
